--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "oclif": {
-    "bin": "cli.js",
+    "bin": "hanbok",
     "commands": {
       "strategy": "explicit",
       "target": "./dist/cli/cli.es.js",
