--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@lib/*": ["./src/lib/*"],
+      "@lib/*": ["./src/lib/*"]
     },
 
     "tsBuildInfoFile": "./build/tmp/tsconfig.app.tsbuildinfo",
