--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
   },
   "type": "module",
   "scripts": {
+    "build": "npm run esbuild; npm run tsc; npm run rollup",
+    "dev": "npx concurrently npm:esbuild-watch npm:tsc-watch npm:rollup-watch",
     "tsc": "npx tsc -b",
     "tsc-watch": "npx tsc -b -w",
     "esbuild": "node ./esbuild.config.js",
     "esbuild-watch": "node ./esbuild.config.js --watch",
+    "rollup": "npx rollup -c rollup.config.js",
+    "rollup-watch": "npx rollup -w -c rollup.config.js",
     "prettier": "npx prettier --write **/*.{ts,tsx,css,scss,html,json,js}"
   },
   "dependencies": {
@@ -52,6 +56,7 @@
     "concurrently": "^9.1.2",
     "esbuild": "^0.25.2",
     "prettier": "^3.5.3",
+    "rollup-plugin-dts": "^6.2.1",
     "typescript": "~5.8.3"
   }
 }
