--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "npx prettier --write **/*.{ts,tsx,css,scss,html,json,js}"
   },
   "dependencies": {
+    "chokidar": "^4.0.3",
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
     "rollup": "^4.40.0"
