--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chokidar": "^4.0.3",
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
+    "prisma": "^6.6.0",
     "rollup": "^4.40.0"
   },
   "peerDependenciesMeta": {},
