--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
     "prisma": "^6.6.0",
-    "rollup": "^4.40.0"
+    "rollup": "^4.40.0",
+    "vite": "^6.3.3"
   },
   "peerDependenciesMeta": {},
   "devDependencies": {
