--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "prettier": "npx prettier --write **/*.{ts,tsx,css,scss,html,json,js}"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
     "chokidar": "^4.0.3",
+    "connect": "^3.7.0",
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
     "prisma": "^6.6.0",
@@ -56,6 +58,7 @@
     "@oclif/plugin-autocomplete": "^3.2.27",
     "@oclif/plugin-help": "^6.2.27",
     "@oclif/plugin-not-found": "^3.2.49",
+    "@types/connect": "^3.4.38",
     "@types/node": "^22.14.1",
     "concurrently": "^9.1.2",
     "esbuild": "^0.25.2",
