--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "bin": {
     "hanbok": "bin/hanbok",
+    "hanbok-debug": "bin/hanbok-debug",
     "hb": "bin/hb"
   },
   "oclif": {
@@ -47,6 +48,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "chokidar": "^4.0.3",
     "connect": "^3.7.0",
+    "find-my-way": "^9.3.0",
     "globby": "^14.1.0",
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
