--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "prisma": "^6.6.0",
     "rollup": "^4.40.0",
     "serve-static": "^2.2.0",
-    "vite": "^6.3.3"
+    "vite": "^6.3.3",
+    "zod": "^3.24.3"
   },
   "peerDependenciesMeta": {},
   "devDependencies": {
