--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "@vitejs/plugin-react": "^4.4.1",
+    "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
     "connect": "^3.7.0",
     "find-my-way": "^9.3.0",
@@ -64,6 +65,7 @@
     "@oclif/plugin-autocomplete": "^3.2.27",
     "@oclif/plugin-help": "^6.2.27",
     "@oclif/plugin-not-found": "^3.2.49",
+    "@types/body-parser": "^1.19.5",
     "@types/connect": "^3.4.38",
     "@types/node": "^22.14.1",
     "@types/serve-static": "^1.15.7",
