--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
     "prisma": "^6.6.0",
+    "raw-body": "^3.0.0",
     "rollup": "^4.40.0",
     "serve-static": "^2.2.0",
     "vite": "^6.3.3",
