simplified implementation of proxyRequest by using http-proxy

--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
     "connect": "^3.7.0",
+    "finalhandler": "^2.1.0",
     "find-my-way": "^9.3.0",
     "globby": "^14.1.0",
+    "http-proxy": "^1.18.1",
     "oclif": "^4.17.46",
     "pkg-dir": "^8.0.0",
     "prisma": "^6.6.0",
@@ -68,6 +70,8 @@
     "@oclif/plugin-not-found": "^3.2.49",
     "@types/body-parser": "^1.19.5",
     "@types/connect": "^3.4.38",
+    "@types/finalhandler": "^1.2.3",
+    "@types/http-proxy": "^1.17.16",
     "@types/node": "^22.14.1",
     "@types/serve-static": "^1.15.7",
     "concurrently": "^9.1.2",
