--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     "@aws-cdk/toolkit-lib": "^0.3.3",
     "@tailwindcss/vite": "^4.1.4",
     "@vitejs/plugin-react": "^4.4.1",
-    "aws-cdk": "^2.1013.0",
-    "aws-cdk-lib": "^2.194.0",
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
     "connect": "^3.7.0",
@@ -62,9 +60,19 @@
     "prisma": "^6.6.0",
     "raw-body": "^3.0.0",
     "rollup": "^4.40.0",
+    "aws-cdk": "^2.1013.0",
     "serve-static": "^2.2.0",
     "vite": "^6.3.3",
-    "zod": "^3.24.3"
+    "esbuild": "^0.25.2",
+    "rollup-plugin-dts": "^6.2.1",
+    "zod": "^3.24.3",
+    "prettier": "^3.5.3",
+    "concurrently": "^9.1.2",
+    "typescript": "~5.8.3"
+  },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.194.0",
+    "constructs": "^10.4.2"
   },
   "peerDependenciesMeta": {},
   "devDependencies": {
@@ -77,11 +85,6 @@
     "@types/finalhandler": "^1.2.3",
     "@types/http-proxy": "^1.17.16",
     "@types/node": "^22.14.1",
-    "@types/serve-static": "^1.15.7",
-    "concurrently": "^9.1.2",
-    "esbuild": "^0.25.2",
-    "prettier": "^3.5.3",
-    "rollup-plugin-dts": "^6.2.1",
-    "typescript": "~5.8.3"
+    "@types/serve-static": "^1.15.7"
   }
 }
