--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "exports": {
     "./tools": "./dist/tools/tools.es.js",
     "./server": "./dist/server/server.es.js",
-    "./routes": "./dist/routes/routes.es.js",
-    "./cdk": "./dist/cdk/cdk.es.js"
+    "./routes": "./dist/routes/routes.es.js"
   },
   "bin": {
     "hanbok": "bin/hanbok",
