--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "@aws-cdk/toolkit-lib": "^0.3.3",
     "@tailwindcss/vite": "^4.1.4",
     "@vitejs/plugin-react": "^4.4.1",
+    "aws-cdk": "^2.1013.0",
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
+    "concurrently": "^9.1.2",
     "connect": "^3.7.0",
+    "esbuild": "^0.25.2",
     "finalhandler": "^2.1.0",
     "find-my-way": "^9.3.0",
     "globby": "^14.1.0",
@@ -59,18 +62,16 @@
     "oclif": "^4.17.46",
     "path-to-regexp": "^8.2.0",
     "pkg-dir": "^8.0.0",
+    "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "raw-body": "^3.0.0",
     "rollup": "^4.40.0",
-    "aws-cdk": "^2.1013.0",
-    "serve-static": "^2.2.0",
-    "vite": "^6.3.3",
-    "esbuild": "^0.25.2",
     "rollup-plugin-dts": "^6.2.1",
-    "zod": "^3.24.3",
-    "prettier": "^3.5.3",
-    "concurrently": "^9.1.2",
-    "typescript": "~5.8.3"
+    "serve-static": "^2.2.0",
+    "source-map-support": "^0.5.21",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.3",
+    "zod": "^3.24.3"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.194.0",
