--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@vitejs/plugin-react": "^4.4.1",
     "aws-cdk": "^2.1013.0",
+    "aws-lambda": "^1.0.7",
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
     "concurrently": "^9.1.2",
@@ -83,6 +84,7 @@
     "@oclif/plugin-autocomplete": "^3.2.27",
     "@oclif/plugin-help": "^6.2.27",
     "@oclif/plugin-not-found": "^3.2.49",
+    "@types/aws-lambda": "^8.10.149",
     "@types/body-parser": "^1.19.5",
     "@types/connect": "^3.4.38",
     "@types/finalhandler": "^1.2.3",
