--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "http-proxy": "^1.18.1",
     "oclif": "^4.17.46",
     "path-to-regexp": "^8.2.0",
+    "peggy": "^5.0.3",
     "pkg-dir": "^8.0.0",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
