--- a/package.json
+++ b/package.json
@@ -75,12 +75,12 @@
     "serve-static": "^2.2.0",
     "source-map-support": "^0.5.21",
     "typescript": "~5.8.3",
-    "vite": "^6.3.3",
-    "zod": "^3.24.3"
+    "vite": "^6.3.3"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.194.0",
-    "constructs": "^10.4.2"
+    "constructs": "^10.4.2",
+    "zod": "^3.24.3"
   },
   "peerDependenciesMeta": {},
   "devDependencies": {
@@ -94,6 +94,7 @@
     "@types/finalhandler": "^1.2.3",
     "@types/http-proxy": "^1.17.16",
     "@types/node": "^22.14.1",
-    "@types/serve-static": "^1.15.7"
+    "@types/serve-static": "^1.15.7",
+    "zod": "^3.24.3"
   }
 }
